fixed margin collapse issue

--- a/server/app/sass/landingpage.scss
+++ b/server/app/sass/landingpage.scss
@@ -491,10 +491,14 @@ h5.address {
   .main-info .main-info-content h3 {
     font-size: 24px;
   }
+
+  .landingpage-wrapper {
+    margin-bottom: -205px;
+  }
+
   .container-fluid,
   .countdown-clock {
     background-color: #004D71;
-    margin-top: -103px;
   }
   .row .remove-padding {
     padding: 0px;
